Fix code highlights on small screens

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -7,13 +7,19 @@
   //-webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   //box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 10px 0 10px 0;
-  //overflow: scroll;
+  overflow: scroll;
+  width: 100%;
 }
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
-
+@media (min-width: 1024px) {
+  .highlighter-rouge, .highlight{
+    width: min-content;
+    overflow: hidden;
+  }
+}
 .highlight .c { color: #586E75 } /* Comment */
 .highlight .err { color: var(--textGray) } /* Error */
 .highlight .g { color: var(--textGray) } /* Generic */
