--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -49,7 +49,7 @@
   .entry {
     img {
       width: 475px;
-      border-radius: 20px;
+      border-radius: 10px;
       margin-bottom: 5px;
     }
   }
